server/crates/djinn-agent/src/extension/snapshots/djinn_agent__extension__tests__lead_tool_names.snap
---
source: crates/djinn-agent/src/extension/tests.rs
assertion_line: 1735
expression: names
---
[
  "task_show",
  "task_list",
  "task_activity_list",
  "memory_read",
  "memory_search",
  "memory_list",
  "shell",
  "read",
  "lsp",
  "code_graph",
  "ci_job_log",
  "github_search",
  "output_view",
  "output_grep",
  "task_create",
  "task_update",
  "task_blocked_list",
  "epic_show",
  "epic_update",
  "epic_tasks",
  "epic_close",
  "task_delete_branch",
  "task_archive_activity",
  "task_reset_counters",
  "task_kill_session",
  "request_architect",
  "submit_decision"
]
